Changed the font of heros-pandemic-section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <main class="container-fluid main-wrapper">
       <!-- first section small screen -->
-      <!-- <section class="top-story  d-sm-block d-md-none d-lg-none">
+      <section class="top-story  d-sm-block d-md-none d-lg-none">
         <a  class="first-section-title w-100" href="#">
           <h2 class="font-weight-bolder">TOP STORY</h2>
         </a>
@@ -667,13 +667,13 @@
         </article>
         
 
-      </section> -->
+      </section>
 
       <!-- first section on large screen -->
 
       <div class="row first-section-wrapper">
         <div class="col-md-5 col-lg ">
-          <section class="d-sm-block d-md-block d-lg-block order-sm-2">
+          <section class="d-sm-none d-md-block d-lg-block">
             <a  class="first-section-title w-100" href="#">
               <h2 class="font-weight-bolder">FEATURED STORIES</h2>
             </a>
@@ -858,7 +858,7 @@
         </div>
 
         <div class="col-md-7 col-lg-5">
-          <section class="top-story d-sm-block d-md-block d-lg-block order-sm-1">
+          <section class="top-story d-sm-none d-md-block d-lg-block">
             <a  class="first-section-title w-100" href="#">
               <h2 class="font-weight-bolder">TOP STORY</h2>
             </a>
@@ -885,29 +885,8 @@
               </div>
             </article>
           </section>
-          <article class="more-stories-article d-flex border-top pb-5 d-sm-none d-md-block d-lg-block">
-            <div class=" justify-content-end">
-              <img class="img-fluid more-stories_img" src="https://d.newsweek.com/en/full/1581093/coronavirus-america-recoveries-40000-people.jpg" alt="more stories">
-            </div>
-            <div class="d-flex flex-column ml-3">
-              <div>
-                <a href="#">
-                  <h4 class=" more-stories-title">
-                    Restauranteur Delivers Oranges to Hospital Workers Amid Coronavirus Crisis
-                  </h4>
-                </a>
-              </div>  
-              <div>
-                <p class=" more-stories-paragraph text-body">
-                  "We all have to help each other," Matthew Fermin, 
-                  owner of East Harlem restaurant Santiago's 
-                  Beer Garden, told Newsweek.
-                </p>
-              </div>
-            </div>
-          </article>
           <section class="heros-pandemic">
-            <a  class="first-section-title w-100" href="#">
+            <a  class="heros-pandemic-section-title w-100" href="#">
               <h2 class="font-weight-bolder">HEROES OF THE PANDEMIC</h2>
             </a>
             <div class="row heros-articles">
@@ -922,11 +901,11 @@
                   </div>
                   <div class="hero-body">
                     <a href="#">
-                      <h2 class="mag_link2 article-title py-2">
+                      <h2 class="mag_link2 hero-pandemic-title py-2">
                         COVID-19 Linked to Changes to the Brains of Some Patients
                       </h2>
                     </a>
-                    <p class="card-text card-text-hero pb-2">
+                    <p class="card-text hero-pandemic-para pb-2">
                       Have the pollsters learned from their mistakes in the 
                       2016 presidential election? Maybe. Maybe not
                     </p>
@@ -935,7 +914,7 @@
               <article class="col-sm-12 col-md-4 col-lg-4 w-100 border-0 d-flex flex-column">
                 <div>
                   <a href="#">
-                    <img class=" rounded-0 hero-img w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="image">
+                    <img class=" rounded-0  w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="top-story">
                   </a>
                   <a href="#">
                     <p class=" politics hero_stripe">Pandemic Heroes</p>
@@ -943,11 +922,11 @@
                 </div>
                 <div class="hero-body">
                   <a href="#">
-                    <h2 class="mag_link2 article-title py-2">
+                    <h2 class="mag_link2 hero-pandemic-title py-2">
                       COVID-19 Linked to Changes to the Brains of Some Patients
                     </h2>
                   </a>
-                  <p class="card-text card-text-hero pb-2">
+                  <p class="card-text hero-pandemic-para pb-2">
                     Have the pollsters learned from their mistakes in the 
                     2016 presidential election? Maybe. Maybe not
                   </p>
@@ -956,7 +935,7 @@
               <article class="col-sm-12 col-md-4 col-lg-4 w-100 border-0 d-flex flex-column">
                 <div>
                   <a href="#">
-                    <img class=" rounded-0 hero-img w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="image">
+                    <img class=" rounded-0  w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="top-story">
                   </a>
                   <a href="#">
                     <p class=" politics hero_stripe">Pandemic Heroes</p>
@@ -964,48 +943,28 @@
                 </div>
                 <div class="hero-body">
                   <a href="#">
-                    <h2 class="mag_link2 article-title py-2">
+                    <h2 class="mag_link2 hero-pandemic-title py-2">
                       COVID-19 Linked to Changes to the Brains of Some Patients
                     </h2>
                   </a>
-                  <p class="card-text card-text-hero pb-2">
+                  <p class="card-text hero-pandemic-para pb-2">
                     Have the pollsters learned from their mistakes in the 
                     2016 presidential election? Maybe. Maybe not
                   </p>
                 </div>
               </article>  
+               
             </div>
           </section>
           <section class="heros-pandemic">
-            <a  class="first-section-title w-100" href="#">
+            <a  class="heros-pandemic-section-title w-100" href="#">
               <h2 class="font-weight-bolder">HEROES OF THE PANDEMIC</h2>
             </a>
             <div class="row heros-articles">
               <article class="col-sm-12 col-md-4 col-lg-4 w-100 border-0 d-flex flex-column">
-                  <div>
-                    <a href="#">
-                      <img class=" rounded-0 hero-img w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="image">
-                    </a>
-                    <a href="#">
-                      <p class=" politics hero_stripe">Pandemic Heroes</p>
-                    </a>
-                  </div>
-                  <div class="hero-body">
-                    <a href="#">
-                      <h2 class="mag_link2 article-title py-2">
-                        COVID-19 Linked to Changes to the Brains of Some Patients
-                      </h2>
-                    </a>
-                    <p class="card-text card-text-hero pb-2">
-                      Have the pollsters learned from their mistakes in the 
-                      2016 presidential election? Maybe. Maybe not
-                    </p>
-                  </div>
-              </article>
-              <article class="col-sm-12 col-md-4 col-lg-4 w-100 border-0 d-flex flex-column">
                 <div>
                   <a href="#">
-                    <img class=" rounded-0 hero-img w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="image">
+                    <img class=" rounded-0  w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="top-story">
                   </a>
                   <a href="#">
                     <p class=" politics hero_stripe">Pandemic Heroes</p>
@@ -1013,11 +972,11 @@
                 </div>
                 <div class="hero-body">
                   <a href="#">
-                    <h2 class="mag_link2 article-title py-2">
+                    <h2 class="mag_link2 hero-pandemic-title py-2">
                       COVID-19 Linked to Changes to the Brains of Some Patients
                     </h2>
                   </a>
-                  <p class="card-text card-text-hero pb-2">
+                  <p class="card-text hero-pandemic-para pb-2">
                     Have the pollsters learned from their mistakes in the 
                     2016 presidential election? Maybe. Maybe not
                   </p>
@@ -1026,7 +985,7 @@
               <article class="col-sm-12 col-md-4 col-lg-4 w-100 border-0 d-flex flex-column">
                 <div>
                   <a href="#">
-                    <img class=" rounded-0 hero-img w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg"  alt="image">
+                    <img class=" rounded-0  w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="top-story">
                   </a>
                   <a href="#">
                     <p class=" politics hero_stripe">Pandemic Heroes</p>
@@ -1034,11 +993,32 @@
                 </div>
                 <div class="hero-body">
                   <a href="#">
-                    <h2 class="mag_link2 article-title py-2">
+                    <h2 class="mag_link2 hero-pandemic-title py-2">
                       COVID-19 Linked to Changes to the Brains of Some Patients
                     </h2>
                   </a>
-                  <p class="card-text card-text-hero pb-2">
+                  <p class="card-text hero-pandemic-para pb-2">
+                    Have the pollsters learned from their mistakes in the 
+                    2016 presidential election? Maybe. Maybe not
+                  </p>
+                </div>
+              </article> 
+              <article class="col-sm-12 col-md-4 col-lg-4 w-100 border-0 d-flex flex-column">
+                <div>
+                  <a href="#">
+                    <img class=" rounded-0  w-100" src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.jpg" alt="top-story">
+                  </a>
+                  <a href="#">
+                    <p class=" politics hero_stripe">Pandemic Heroes</p>
+                  </a>
+                </div>
+                <div class="hero-body">
+                  <a href="#">
+                    <h2 class="mag_link2 hero-pandemic-title py-2">
+                      COVID-19 Linked to Changes to the Brains of Some Patients
+                    </h2>
+                  </a>
+                  <p class="card-text hero-pandemic-para pb-2">
                     Have the pollsters learned from their mistakes in the 
                     2016 presidential election? Maybe. Maybe not
                   </p>
@@ -1672,7 +1652,7 @@
           </div>
 
           <div class="row d-flex justify-content-between magzine-wrapper">
-            <article class="col-md-3 col-sm-12 pt-3">
+            <!-- <article class="col-md-3 col-sm-12 pt-3">
               <h2 class="d-none">title</h2>
               <div class="w-100">
                 <div class="w-100">
@@ -1683,15 +1663,9 @@
                 </div>
                 <a class="mag-promo-link" href="#">SEE ALL FEATURES</a>
               </div>
-            </article>
-            <article class="col-md-3 col-sm-12 pt-5 w-100 " >
-              <div class="w-100">
-                <div class="w-100 ">
-                  <a href="#">
-                    <img class="w-100 full-height height-small" src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.jpg" alt="">
-                  </a>
-                </div>
-              </div>
+            </article> -->
+            <article class="card col-md-3 col-sm-12">
+              <img src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.jpg" alt="magzine image">
               <div class="d-flex align-items-center py-2 ">
                 <span class="cover-span p-1">COVER</span>
                 <a href="#" class="mag_link font-weight-bold px-2">NEWS</a>
@@ -1704,14 +1678,8 @@
                 </a>
               </div>
             </article>
-            <article class="col-md-3 col-sm-12 pt-5 w-100 " >
-              <div class="w-100">
-                <div class="w-100 ">
-                  <a href="#">
-                    <img class="w-100 full-height height-small" src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.jpg" alt="">
-                  </a>
-                </div>
-              </div>
+            <article class="card col-md-3 col-sm-12 w-100">
+              <img src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.jpg" alt="magzine image">
               <div class="d-flex align-items-center py-2 ">
                 <span class="cover-span p-1">COVER</span>
                 <a href="#" class="mag_link font-weight-bold px-2">NEWS</a>
@@ -1724,14 +1692,22 @@
                 </a>
               </div>
             </article>
-            <article class="col-md-3 col-sm-12 pt-5 w-100 " >
-              <div class="w-100">
-                <div class="w-100 ">
-                  <a href="#">
-                    <img class="w-100  full-height height-small" src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.jpg" alt="">
-                  </a>
-                </div>
+            <article class="card col-md-3 col-sm-12 w-100">
+              <img src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.jpg" alt="magzine image">
+              <div class="d-flex align-items-center py-2 ">
+                <span class="cover-span p-1">COVER</span>
+                <a href="#" class="mag_link font-weight-bold px-2">NEWS</a>
               </div>
+              <div>
+                <a href="#">
+                  <h2 class="mag_link2">
+                    Who Should Doctors Save? Inside the Debate Over Rationing Coronavirus Care
+                  </h2>
+                </a>
+              </div>
+            </article>
+            <article class="card col-md-3 col-sm-12 w-100">
+              <img src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.jpg" alt="magzine image">
               <div class="d-flex align-items-center py-2 ">
                 <span class="cover-span p-1">COVER</span>
                 <a href="#" class="mag_link font-weight-bold px-2">NEWS</a>
